	* Incremented the package version to 2.1.1.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Changed installation location of 'dvt-bin.conf' from
	'/etc/apache2/conf.d/' to '/etc/httpd.conf.d/'.
2014-05-13 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.2.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Moved 'configure.in' to 'configure.ac'.
	* Modernized AC_INIT() and AM_INIT() invocations in
	'configure.ac'.
2014-09-29 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'make rpm' target to use in-home RPM build
	directories.
2014-10-07 Fred Gleason <fredg@paravelsystems.com>
	* Updated 'davit/precisiontrak.cpp' to use the 'Davit-v3' template
	in PrecisionTrak.
2014-10-07 Fred Gleason <fredg@paravelsystems.com>
	* Refactored to eliminate the isctrl() call in
	'davit/precisiontrak.cpp' so as to allow compilation under
	Windows.
2014-10-07 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.3.
2014-11-17 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Send Test E-Mail' button to the 'Edit System Settings'
	dialog in 'davit/edit_system.cpp' and 'davit/edit_system.h'.
	* Removed duplicate catch clause in 'lib/dvtmail.cpp'.
2014-11-17 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 2.1.4.
2014-12-09 Fred Gleason <fredg@paravelsystems.com>
	* Renamed 'davit/missingaffidavit_report.cpp' to
	'davit/missingaffidavitcontact_report.cpp'.
2014-12-09 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a 'Missing Affidavit Submissions' report in
	'davit/missingaffidavit_report.cpp'.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Implemented sorting by Worst Offenders and State in the
	'Missing Affidavit Submissions' report in
	'davit/missingaffidavit_report.cpp'.
2014-12-10 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a typo in the spelling of 'massachusetts' in
	'lib/statecombobox.cpp' and 'lib/state_conv.cpp'.